y.output
Terminals which are not used

   BYVALUE
   CAST
   CONST
   FUTURE
   GENERIC
   GOTO
   INNER
   OPERATOR
   OUTER
   REST
   VAR
   UNSIGNED_CHAR
   UNSIGNED_INT
   TYPEDEF_CHAR
   TYPEDEF_INT
   UNSIGNED
   TYPEDEF


State 413 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompilationUnit $end

    1 TypeSpecifier: TypeName
    2              | TypeName Dims

    3 TypeName: PrimitiveType
    4         | QualifiedName

    5 ClassNameList: QualifiedName
    6              | ClassNameList ',' QualifiedName

    7 PrimitiveType: BOOLEAN
    8              | CHAR
    9              | BYTE
   10              | SHORT
   11              | INT
   12              | LONG
   13              | FLOAT
   14              | DOUBLE
   15              | VOID

   16 CompilationUnit: ProgramFile

   17 ProgramFile: PackageStatement ImportStatements TypeDeclarations
   18            | PackageStatement ImportStatements
   19            | PackageStatement TypeDeclarations
   20            | ImportStatements TypeDeclarations
   21            | PackageStatement
   22            | ImportStatements
   23            | TypeDeclarations

   24 PackageStatement: PACKAGE QualifiedName ';'

   25 TypeDeclarations: TypeDeclaration
   26                 | TypeDeclarations TypeDeclaration

   27 ImportStatements: ImportStatement
   28                 | ImportStatements ImportStatement

   29 ImportStatement: IMPORT QualifiedName ';'
   30                | IMPORT QualifiedName '.' '*' ';'

   31 QualifiedName: IDENTIFIER
   32              | QualifiedName '.' IDENTIFIER

   33 TypeDeclaration: ClassHeader '{' FieldDeclarations '}'
   34                | ClassHeader '{' '}'

   35 ClassHeader: Modifiers ClassWord IDENTIFIER Extends Interfaces
   36            | Modifiers ClassWord IDENTIFIER Extends
   37            | Modifiers ClassWord IDENTIFIER Interfaces
   38            | ClassWord IDENTIFIER Extends Interfaces
   39            | Modifiers ClassWord IDENTIFIER
   40            | ClassWord IDENTIFIER Extends
   41            | ClassWord IDENTIFIER Interfaces
   42            | ClassWord IDENTIFIER

   43 Modifiers: Modifier
   44          | Modifiers Modifier

   45 Modifier: ABSTRACT
   46         | FINAL
   47         | PUBLIC
   48         | PROTECTED
   49         | PRIVATE
   50         | STATIC
   51         | TRANSIENT
   52         | VOLATILE
   53         | NATIVE
   54         | SYNCHRONIZED

   55 ClassWord: CLASS
   56          | INTERFACE

   57 Interfaces: IMPLEMENTS ClassNameList

   58 FieldDeclarations: FieldDeclaration
   59                  | FieldDeclarations FieldDeclaration

   60 FieldDeclaration: FieldVariableDeclaration ';'
   61                 | MethodDeclaration
   62                 | ConstructorDeclaration
   63                 | StaticInitializer
   64                 | NonStaticInitializer
   65                 | TypeDeclaration

   66 FieldVariableDeclaration: Modifiers TypeSpecifier VariableDeclarators
   67                         | TypeSpecifier VariableDeclarators

   68 VariableDeclarators: VariableDeclarator
   69                    | VariableDeclarators ',' VariableDeclarator

   70 VariableDeclarator: DeclaratorName
   71                   | DeclaratorName '=' VariableInitializer

   72 VariableInitializer: Expression
   73                    | '{' '}'
   74                    | '{' ArrayInitializers '}'

   75 ArrayInitializers: VariableInitializer
   76                  | ArrayInitializers ',' VariableInitializer
   77                  | ArrayInitializers ','

   78 MethodDeclaration: Modifiers TypeSpecifier MethodDeclarator Throws MethodBody
   79                  | Modifiers TypeSpecifier MethodDeclarator MethodBody
   80                  | TypeSpecifier MethodDeclarator Throws MethodBody
   81                  | TypeSpecifier MethodDeclarator MethodBody

   82 MethodDeclarator: DeclaratorName '(' ParameterList ')'
   83                 | DeclaratorName '(' ')'
   84                 | MethodDeclarator OP_DIM

   85 ParameterList: Parameter
   86              | ParameterList ',' Parameter

   87 Parameter: TypeSpecifier DeclaratorName

   88 DeclaratorName: IDENTIFIER
   89               | DeclaratorName OP_DIM

   90 Throws: THROWS ClassNameList

   91 MethodBody: Block
   92           | ';'

   93 ConstructorDeclaration: Modifiers ConstructorDeclarator Throws Block
   94                       | Modifiers ConstructorDeclarator Block
   95                       | ConstructorDeclarator Throws Block
   96                       | ConstructorDeclarator Block

   97 ConstructorDeclarator: IDENTIFIER '(' ParameterList ')'
   98                      | IDENTIFIER '(' ')'

   99 StaticInitializer: STATIC Block

  100 NonStaticInitializer: Block

  101 Extends: EXTENDS TypeName
  102        | Extends ',' TypeName

  103 Block: '{' LocalVariableDeclarationsAndStatements '}'
  104      | '{' '}'

  105 LocalVariableDeclarationsAndStatements: LocalVariableDeclarationOrStatement
  106                                       | LocalVariableDeclarationsAndStatements LocalVariableDeclarationOrStatement

  107 LocalVariableDeclarationOrStatement: LocalVariableDeclarationStatement
  108                                    | Statement

  109 LocalVariableDeclarationStatement: Modifiers TypeSpecifier VariableDeclarators ';'
  110                                  | TypeSpecifier VariableDeclarators ';'

  111 Statement: EmptyStatement
  112          | LabeledStatement
  113          | ExpressionStatement ';'
  114          | SelectionStatement
  115          | IterationStatement
  116          | JumpStatement
  117          | GuardingStatement
  118          | Block

  119 EmptyStatement: ';'

  120 LabeledStatement: IDENTIFIER ':' LocalVariableDeclarationOrStatement
  121                 | CASE ConstantExpression ':' LocalVariableDeclarationOrStatement
  122                 | DEFAULT ':' LocalVariableDeclarationOrStatement

  123 ExpressionStatement: Expression

  124 SelectionStatement: IF '(' Expression ')' Statement
  125                   | IF '(' Expression ')' Statement ELSE Statement
  126                   | SWITCH '(' Expression ')' Block

  127 IterationStatement: WHILE '(' Expression ')' Statement
  128                   | DO Statement WHILE '(' Expression ')' ';'
  129                   | FOR '(' ForInit ForExpr ForIncr ')' Statement
  130                   | FOR '(' ForInit ForExpr ')' Statement

  131 ForInit: ExpressionStatements ';'
  132        | LocalVariableDeclarationStatement
  133        | ';'

  134 ForExpr: Expression ';'
  135        | ';'

  136 ForIncr: ExpressionStatements

  137 ExpressionStatements: ExpressionStatement
  138                     | ExpressionStatements ',' ExpressionStatement

  139 JumpStatement: BREAK IDENTIFIER ';'
  140              | BREAK ';'
  141              | CONTINUE IDENTIFIER ';'
  142              | CONTINUE ';'
  143              | RETURN Expression ';'
  144              | RETURN ';'
  145              | THROW Expression ';'

  146 GuardingStatement: SYNCHRONIZED '(' Expression ')' Statement
  147                  | TRY Block Finally
  148                  | TRY Block Catches
  149                  | TRY Block Catches Finally

  150 Catches: Catch
  151        | Catches Catch

  152 Catch: CatchHeader Block

  153 CatchHeader: CATCH '(' TypeSpecifier IDENTIFIER ')'
  154            | CATCH '(' TypeSpecifier ')'

  155 Finally: FINALLY Block

  156 PrimaryExpression: QualifiedName
  157                  | NotJustName

  158 NotJustName: SpecialName
  159            | NewAllocationExpression
  160            | ComplexPrimary

  161 ComplexPrimary: '(' Expression ')'
  162               | ComplexPrimaryNoParenthesis

  163 ComplexPrimaryNoParenthesis: LITERAL
  164                            | BOOLLIT
  165                            | ArrayAccess
  166                            | FieldAccess
  167                            | MethodCall

  168 ArrayAccess: QualifiedName '[' Expression ']'
  169            | ComplexPrimary '[' Expression ']'

  170 FieldAccess: NotJustName '.' IDENTIFIER
  171            | RealPostfixExpression '.' IDENTIFIER

  172 MethodCall: MethodAccess '(' ArgumentList ')'
  173           | MethodAccess '(' ')'

  174 MethodAccess: ComplexPrimaryNoParenthesis
  175             | SpecialName
  176             | QualifiedName

  177 SpecialName: THIS
  178            | SUPER
  179            | JNULL

  180 ArgumentList: Expression
  181             | ArgumentList ',' Expression

  182 NewAllocationExpression: ArrayAllocationExpression
  183                        | ClassAllocationExpression
  184                        | ArrayAllocationExpression '{' '}'
  185                        | ClassAllocationExpression '{' '}'
  186                        | ArrayAllocationExpression '{' ArrayInitializers '}'
  187                        | ClassAllocationExpression '{' FieldDeclarations '}'

  188 ClassAllocationExpression: NEW TypeName '(' ArgumentList ')'
  189                          | NEW TypeName '(' ')'

  190 ArrayAllocationExpression: NEW TypeName DimExprs Dims
  191                          | NEW TypeName DimExprs
  192                          | NEW TypeName Dims

  193 DimExprs: DimExpr
  194         | DimExprs DimExpr

  195 DimExpr: '[' Expression ']'

  196 Dims: OP_DIM
  197     | Dims OP_DIM

  198 PostfixExpression: PrimaryExpression
  199                  | RealPostfixExpression

  200 RealPostfixExpression: PostfixExpression OP_INC
  201                      | PostfixExpression OP_DEC

  202 UnaryExpression: OP_INC UnaryExpression
  203                | OP_DEC UnaryExpression
  204                | ArithmeticUnaryOperator CastExpression
  205                | LogicalUnaryExpression

  206 LogicalUnaryExpression: PostfixExpression
  207                       | LogicalUnaryOperator UnaryExpression

  208 LogicalUnaryOperator: '~'
  209                     | '!'

  210 ArithmeticUnaryOperator: '+'
  211                        | '-'

  212 CastExpression: UnaryExpression
  213               | '(' PrimitiveTypeExpression ')' CastExpression
  214               | '(' ClassTypeExpression ')' CastExpression
  215               | '(' Expression ')' LogicalUnaryExpression

  216 PrimitiveTypeExpression: PrimitiveType
  217                        | PrimitiveType Dims

  218 ClassTypeExpression: QualifiedName Dims

  219 MultiplicativeExpression: CastExpression
  220                         | MultiplicativeExpression '*' CastExpression
  221                         | MultiplicativeExpression '/' CastExpression
  222                         | MultiplicativeExpression '%' CastExpression

  223 AdditiveExpression: MultiplicativeExpression
  224                   | AdditiveExpression '+' MultiplicativeExpression
  225                   | AdditiveExpression '-' MultiplicativeExpression

  226 ShiftExpression: AdditiveExpression
  227                | ShiftExpression OP_SHL AdditiveExpression
  228                | ShiftExpression OP_SHR AdditiveExpression
  229                | ShiftExpression OP_SHRR AdditiveExpression

  230 RelationalExpression: ShiftExpression
  231                     | RelationalExpression '<' ShiftExpression
  232                     | RelationalExpression '>' ShiftExpression
  233                     | RelationalExpression OP_LE ShiftExpression
  234                     | RelationalExpression OP_GE ShiftExpression
  235                     | RelationalExpression INSTANCEOF TypeSpecifier

  236 EqualityExpression: RelationalExpression
  237                   | EqualityExpression OP_EQ RelationalExpression
  238                   | EqualityExpression OP_NE RelationalExpression

  239 AndExpression: EqualityExpression
  240              | AndExpression '&' EqualityExpression

  241 ExclusiveOrExpression: AndExpression
  242                      | ExclusiveOrExpression '^' AndExpression

  243 InclusiveOrExpression: ExclusiveOrExpression
  244                      | InclusiveOrExpression '|' ExclusiveOrExpression

  245 ConditionalAndExpression: InclusiveOrExpression
  246                         | ConditionalAndExpression OP_LAND InclusiveOrExpression

  247 ConditionalOrExpression: ConditionalAndExpression
  248                        | ConditionalOrExpression OP_LOR ConditionalAndExpression

  249 ConditionalExpression: ConditionalOrExpression
  250                      | ConditionalOrExpression '?' Expression ':' ConditionalExpression

  251 AssignmentExpression: ConditionalExpression
  252                     | UnaryExpression AssignmentOperator AssignmentExpression

  253 AssignmentOperator: '='
  254                   | ASS_MUL
  255                   | ASS_DIV
  256                   | ASS_MOD
  257                   | ASS_ADD
  258                   | ASS_SUB
  259                   | ASS_SHL
  260                   | ASS_SHR
  261                   | ASS_SHRR
  262                   | ASS_AND
  263                   | ASS_XOR
  264                   | ASS_OR

  265 Expression: AssignmentExpression

  266 ConstantExpression: ConditionalExpression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 209
'%' (37) 222
'&' (38) 240
'(' (40) 82 83 97 98 124 125 126 127 128 129 130 146 153 154 161 172
    173 188 189 213 214 215
')' (41) 82 83 97 98 124 125 126 127 128 129 130 146 153 154 161 172
    173 188 189 213 214 215
'*' (42) 30 220
'+' (43) 210 224
',' (44) 6 69 76 77 86 102 138 181
'-' (45) 211 225
'.' (46) 30 32 170 171
'/' (47) 221
':' (58) 120 121 122 250
';' (59) 24 29 30 60 92 109 110 113 119 128 131 133 134 135 139 140
    141 142 143 144 145
'<' (60) 231
'=' (61) 71 253
'>' (62) 232
'?' (63) 250
'[' (91) 168 169 195
']' (93) 168 169 195
'^' (94) 242
'{' (123) 33 34 73 74 103 104 184 185 186 187
'|' (124) 244
'}' (125) 33 34 73 74 103 104 184 185 186 187
'~' (126) 208
error (256)
ABSTRACT (258) 45
BOOLEAN (259) 7
BREAK (260) 139 140
BYTE (261) 9
BYVALUE (262)
CASE (263) 121
CAST (264)
CATCH (265) 153 154
CHAR (266) 8
CLASS (267) 55
CONST (268)
CONTINUE (269) 141 142
DEFAULT (270) 122
DO (271) 128
DOUBLE (272) 14
ELSE (273) 125
EXTENDS (274) 101
FINAL (275) 46
FINALLY (276) 155
FLOAT (277) 13
FOR (278) 129 130
FUTURE (279)
GENERIC (280)
GOTO (281)
IF (282) 124 125
IMPLEMENTS (283) 57
IMPORT (284) 29 30
INNER (285)
INSTANCEOF (286) 235
INT (287) 11
INTERFACE (288) 56
LONG (289) 12
NATIVE (290) 53
NEW (291) 188 189 190 191 192
JNULL (292) 179
OPERATOR (293)
OUTER (294)
PACKAGE (295) 24
PRIVATE (296) 49
PROTECTED (297) 48
PUBLIC (298) 47
REST (299)
RETURN (300) 143 144
SHORT (301) 10
STATIC (302) 50 99
SUPER (303) 178
SWITCH (304) 126
SYNCHRONIZED (305) 54 146
THIS (306) 177
THROW (307) 145
THROWS (308) 90
TRANSIENT (309) 51
TRY (310) 147 148 149
VAR (311)
VOID (312) 15
VOLATILE (313) 52
WHILE (314) 127 128
OP_INC (315) 200 202
OP_DEC (316) 201 203
OP_SHL (317) 227
OP_SHR (318) 228
OP_SHRR (319) 229
OP_GE (320) 234
OP_LE (321) 233
OP_EQ (322) 237
OP_NE (323) 238
OP_LAND (324) 246
OP_LOR (325) 248
OP_DIM (326) 84 89 196 197
ASS_MUL (327) 254
ASS_DIV (328) 255
ASS_MOD (329) 256
ASS_ADD (330) 257
ASS_SUB (331) 258
ASS_SHL (332) 259
ASS_SHR (333) 260
ASS_SHRR (334) 261
ASS_AND (335) 262
ASS_XOR (336) 263
ASS_OR (337) 264
IDENTIFIER (338) 31 32 35 36 37 38 39 40 41 42 88 97 98 120 139 141
    153 170 171
LITERAL (339) 163
BOOLLIT (340) 164
UNSIGNED_CHAR (341)
UNSIGNED_INT (342)
TYPEDEF_CHAR (343)
TYPEDEF_INT (344)
UNSIGNED (345)
TYPEDEF (346)


Nonterminals, with rules where they appear

$accept (116)
    on left: 0
TypeSpecifier (117)
    on left: 1 2, on right: 66 67 78 79 80 81 87 109 110 153 154 235
TypeName (118)
    on left: 3 4, on right: 1 2 101 102 188 189 190 191 192
ClassNameList (119)
    on left: 5 6, on right: 6 57 90
PrimitiveType (120)
    on left: 7 8 9 10 11 12 13 14 15, on right: 3 216 217
CompilationUnit (121)
    on left: 16, on right: 0
ProgramFile (122)
    on left: 17 18 19 20 21 22 23, on right: 16
PackageStatement (123)
    on left: 24, on right: 17 18 19 21
TypeDeclarations (124)
    on left: 25 26, on right: 17 19 20 23 26
ImportStatements (125)
    on left: 27 28, on right: 17 18 20 22 28
ImportStatement (126)
    on left: 29 30, on right: 27 28
QualifiedName (127)
    on left: 31 32, on right: 4 5 6 24 29 30 32 156 168 176 218
TypeDeclaration (128)
    on left: 33 34, on right: 25 26 65
ClassHeader (129)
    on left: 35 36 37 38 39 40 41 42, on right: 33 34
Modifiers (130)
    on left: 43 44, on right: 35 36 37 39 44 66 78 79 93 94 109
Modifier (131)
    on left: 45 46 47 48 49 50 51 52 53 54, on right: 43 44
ClassWord (132)
    on left: 55 56, on right: 35 36 37 38 39 40 41 42
Interfaces (133)
    on left: 57, on right: 35 37 38 41
FieldDeclarations (134)
    on left: 58 59, on right: 33 59 187
FieldDeclaration (135)
    on left: 60 61 62 63 64 65, on right: 58 59
FieldVariableDeclaration (136)
    on left: 66 67, on right: 60
VariableDeclarators (137)
    on left: 68 69, on right: 66 67 69 109 110
VariableDeclarator (138)
    on left: 70 71, on right: 68 69
VariableInitializer (139)
    on left: 72 73 74, on right: 71 75 76
ArrayInitializers (140)
    on left: 75 76 77, on right: 74 76 77 186
MethodDeclaration (141)
    on left: 78 79 80 81, on right: 61
MethodDeclarator (142)
    on left: 82 83 84, on right: 78 79 80 81 84
ParameterList (143)
    on left: 85 86, on right: 82 86 97
Parameter (144)
    on left: 87, on right: 85 86
DeclaratorName (145)
    on left: 88 89, on right: 70 71 82 83 87 89
Throws (146)
    on left: 90, on right: 78 80 93 95
MethodBody (147)
    on left: 91 92, on right: 78 79 80 81
ConstructorDeclaration (148)
    on left: 93 94 95 96, on right: 62
ConstructorDeclarator (149)
    on left: 97 98, on right: 93 94 95 96
StaticInitializer (150)
    on left: 99, on right: 63
NonStaticInitializer (151)
    on left: 100, on right: 64
Extends (152)
    on left: 101 102, on right: 35 36 38 40 102
Block (153)
    on left: 103 104, on right: 91 93 94 95 96 99 100 118 126 147 148
    149 152 155
LocalVariableDeclarationsAndStatements (154)
    on left: 105 106, on right: 103 106
LocalVariableDeclarationOrStatement (155)
    on left: 107 108, on right: 105 106 120 121 122
LocalVariableDeclarationStatement (156)
    on left: 109 110, on right: 107 132
Statement (157)
    on left: 111 112 113 114 115 116 117 118, on right: 108 124 125
    127 128 129 130 146
EmptyStatement (158)
    on left: 119, on right: 111
LabeledStatement (159)
    on left: 120 121 122, on right: 112
ExpressionStatement (160)
    on left: 123, on right: 113 137 138
SelectionStatement (161)
    on left: 124 125 126, on right: 114
IterationStatement (162)
    on left: 127 128 129 130, on right: 115
ForInit (163)
    on left: 131 132 133, on right: 129 130
ForExpr (164)
    on left: 134 135, on right: 129 130
ForIncr (165)
    on left: 136, on right: 129
ExpressionStatements (166)
    on left: 137 138, on right: 131 136 138
JumpStatement (167)
    on left: 139 140 141 142 143 144 145, on right: 116
GuardingStatement (168)
    on left: 146 147 148 149, on right: 117
Catches (169)
    on left: 150 151, on right: 148 149 151
Catch (170)
    on left: 152, on right: 150 151
CatchHeader (171)
    on left: 153 154, on right: 152
Finally (172)
    on left: 155, on right: 147 149
PrimaryExpression (173)
    on left: 156 157, on right: 198
NotJustName (174)
    on left: 158 159 160, on right: 157 170
ComplexPrimary (175)
    on left: 161 162, on right: 160 169
ComplexPrimaryNoParenthesis (176)
    on left: 163 164 165 166 167, on right: 162 174
ArrayAccess (177)
    on left: 168 169, on right: 165
FieldAccess (178)
    on left: 170 171, on right: 166
MethodCall (179)
    on left: 172 173, on right: 167
MethodAccess (180)
    on left: 174 175 176, on right: 172 173
SpecialName (181)
    on left: 177 178 179, on right: 158 175
ArgumentList (182)
    on left: 180 181, on right: 172 181 188
NewAllocationExpression (183)
    on left: 182 183 184 185 186 187, on right: 159
ClassAllocationExpression (184)
    on left: 188 189, on right: 183 185 187
ArrayAllocationExpression (185)
    on left: 190 191 192, on right: 182 184 186
DimExprs (186)
    on left: 193 194, on right: 190 191 194
DimExpr (187)
    on left: 195, on right: 193 194
Dims (188)
    on left: 196 197, on right: 2 190 192 197 217 218
PostfixExpression (189)
    on left: 198 199, on right: 200 201 206
RealPostfixExpression (190)
    on left: 200 201, on right: 171 199
UnaryExpression (191)
    on left: 202 203 204 205, on right: 202 203 207 212 252
LogicalUnaryExpression (192)
    on left: 206 207, on right: 205 215
LogicalUnaryOperator (193)
    on left: 208 209, on right: 207
ArithmeticUnaryOperator (194)
    on left: 210 211, on right: 204
CastExpression (195)
    on left: 212 213 214 215, on right: 204 213 214 219 220 221 222
PrimitiveTypeExpression (196)
    on left: 216 217, on right: 213
ClassTypeExpression (197)
    on left: 218, on right: 214
MultiplicativeExpression (198)
    on left: 219 220 221 222, on right: 220 221 222 223 224 225
AdditiveExpression (199)
    on left: 223 224 225, on right: 224 225 226 227 228 229
ShiftExpression (200)
    on left: 226 227 228 229, on right: 227 228 229 230 231 232 233
    234
RelationalExpression (201)
    on left: 230 231 232 233 234 235, on right: 231 232 233 234 235
    236 237 238
EqualityExpression (202)
    on left: 236 237 238, on right: 237 238 239 240
AndExpression (203)
    on left: 239 240, on right: 240 241 242
ExclusiveOrExpression (204)
    on left: 241 242, on right: 242 243 244
InclusiveOrExpression (205)
    on left: 243 244, on right: 244 245 246
ConditionalAndExpression (206)
    on left: 245 246, on right: 246 247 248
ConditionalOrExpression (207)
    on left: 247 248, on right: 248 249 250
ConditionalExpression (208)
    on left: 249 250, on right: 250 251 266
AssignmentExpression (209)
    on left: 251 252, on right: 252 265
AssignmentOperator (210)
    on left: 253 254 255 256 257 258 259 260 261 262 263 264,
    on right: 252
Expression (211)
    on left: 265, on right: 72 123 124 125 126 127 128 134 143 145
    146 161 168 169 180 181 195 215 250
ConstantExpression (212)
    on left: 266, on right: 121


state 0

    0 $accept: . CompilationUnit $end

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    IMPORT        shift, and go to state 4
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PACKAGE       shift, and go to state 7
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    CompilationUnit   go to state 15
    ProgramFile       go to state 16
    PackageStatement  go to state 17
    TypeDeclarations  go to state 18
    ImportStatements  go to state 19
    ImportStatement   go to state 20
    TypeDeclaration   go to state 21
    ClassHeader       go to state 22
    Modifiers         go to state 23
    Modifier          go to state 24
    ClassWord         go to state 25


state 1

   45 Modifier: ABSTRACT .

    $default  reduce using rule 45 (Modifier)


state 2

   55 ClassWord: CLASS .

    $default  reduce using rule 55 (ClassWord)


state 3

   46 Modifier: FINAL .

    $default  reduce using rule 46 (Modifier)


state 4

   29 ImportStatement: IMPORT . QualifiedName ';'
   30                | IMPORT . QualifiedName '.' '*' ';'

    IDENTIFIER  shift, and go to state 26

    QualifiedName  go to state 27


state 5

   56 ClassWord: INTERFACE .

    $default  reduce using rule 56 (ClassWord)


state 6

   53 Modifier: NATIVE .

    $default  reduce using rule 53 (Modifier)


state 7

   24 PackageStatement: PACKAGE . QualifiedName ';'

    IDENTIFIER  shift, and go to state 26

    QualifiedName  go to state 28


state 8

   49 Modifier: PRIVATE .

    $default  reduce using rule 49 (Modifier)


state 9

   48 Modifier: PROTECTED .

    $default  reduce using rule 48 (Modifier)


state 10

   47 Modifier: PUBLIC .

    $default  reduce using rule 47 (Modifier)


state 11

   50 Modifier: STATIC .

    $default  reduce using rule 50 (Modifier)


state 12

   54 Modifier: SYNCHRONIZED .

    $default  reduce using rule 54 (Modifier)


state 13

   51 Modifier: TRANSIENT .

    $default  reduce using rule 51 (Modifier)


state 14

   52 Modifier: VOLATILE .

    $default  reduce using rule 52 (Modifier)


state 15

    0 $accept: CompilationUnit . $end

    $end  shift, and go to state 29


state 16

   16 CompilationUnit: ProgramFile .

    $default  reduce using rule 16 (CompilationUnit)


state 17

   17 ProgramFile: PackageStatement . ImportStatements TypeDeclarations
   18            | PackageStatement . ImportStatements
   19            | PackageStatement . TypeDeclarations
   21            | PackageStatement .

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    IMPORT        shift, and go to state 4
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    $default  reduce using rule 21 (ProgramFile)

    TypeDeclarations  go to state 30
    ImportStatements  go to state 31
    ImportStatement   go to state 20
    TypeDeclaration   go to state 21
    ClassHeader       go to state 22
    Modifiers         go to state 23
    Modifier          go to state 24
    ClassWord         go to state 25


state 18

   23 ProgramFile: TypeDeclarations .
   26 TypeDeclarations: TypeDeclarations . TypeDeclaration

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    $default  reduce using rule 23 (ProgramFile)

    TypeDeclaration  go to state 32
    ClassHeader      go to state 22
    Modifiers        go to state 23
    Modifier         go to state 24
    ClassWord        go to state 25


state 19

   20 ProgramFile: ImportStatements . TypeDeclarations
   22            | ImportStatements .
   28 ImportStatements: ImportStatements . ImportStatement

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    IMPORT        shift, and go to state 4
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    $default  reduce using rule 22 (ProgramFile)

    TypeDeclarations  go to state 33
    ImportStatement   go to state 34
    TypeDeclaration   go to state 21
    ClassHeader       go to state 22
    Modifiers         go to state 23
    Modifier          go to state 24
    ClassWord         go to state 25


state 20

   27 ImportStatements: ImportStatement .

    $default  reduce using rule 27 (ImportStatements)


state 21

   25 TypeDeclarations: TypeDeclaration .

    $default  reduce using rule 25 (TypeDeclarations)


state 22

   33 TypeDeclaration: ClassHeader . '{' FieldDeclarations '}'
   34                | ClassHeader . '{' '}'

    '{'  shift, and go to state 35


state 23

   35 ClassHeader: Modifiers . ClassWord IDENTIFIER Extends Interfaces
   36            | Modifiers . ClassWord IDENTIFIER Extends
   37            | Modifiers . ClassWord IDENTIFIER Interfaces
   39            | Modifiers . ClassWord IDENTIFIER
   44 Modifiers: Modifiers . Modifier

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    Modifier   go to state 36
    ClassWord  go to state 37


state 24

   43 Modifiers: Modifier .

    $default  reduce using rule 43 (Modifiers)


state 25

   38 ClassHeader: ClassWord . IDENTIFIER Extends Interfaces
   40            | ClassWord . IDENTIFIER Extends
   41            | ClassWord . IDENTIFIER Interfaces
   42            | ClassWord . IDENTIFIER

    IDENTIFIER  shift, and go to state 38


state 26

   31 QualifiedName: IDENTIFIER .

    $default  reduce using rule 31 (QualifiedName)


state 27

   29 ImportStatement: IMPORT QualifiedName . ';'
   30                | IMPORT QualifiedName . '.' '*' ';'
   32 QualifiedName: QualifiedName . '.' IDENTIFIER

    ';'  shift, and go to state 39
    '.'  shift, and go to state 40


state 28

   24 PackageStatement: PACKAGE QualifiedName . ';'
   32 QualifiedName: QualifiedName . '.' IDENTIFIER

    ';'  shift, and go to state 41
    '.'  shift, and go to state 42


state 29

    0 $accept: CompilationUnit $end .

    $default  accept


state 30

   19 ProgramFile: PackageStatement TypeDeclarations .
   26 TypeDeclarations: TypeDeclarations . TypeDeclaration

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    $default  reduce using rule 19 (ProgramFile)

    TypeDeclaration  go to state 32
    ClassHeader      go to state 22
    Modifiers        go to state 23
    Modifier         go to state 24
    ClassWord        go to state 25


state 31

   17 ProgramFile: PackageStatement ImportStatements . TypeDeclarations
   18            | PackageStatement ImportStatements .
   28 ImportStatements: ImportStatements . ImportStatement

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    IMPORT        shift, and go to state 4
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    $default  reduce using rule 18 (ProgramFile)

    TypeDeclarations  go to state 43
    ImportStatement   go to state 34
    TypeDeclaration   go to state 21
    ClassHeader       go to state 22
    Modifiers         go to state 23
    Modifier          go to state 24
    ClassWord         go to state 25


state 32

   26 TypeDeclarations: TypeDeclarations TypeDeclaration .

    $default  reduce using rule 26 (TypeDeclarations)


state 33

   20 ProgramFile: ImportStatements TypeDeclarations .
   26 TypeDeclarations: TypeDeclarations . TypeDeclaration

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    $default  reduce using rule 20 (ProgramFile)

    TypeDeclaration  go to state 32
    ClassHeader      go to state 22
    Modifiers        go to state 23
    Modifier         go to state 24
    ClassWord        go to state 25


state 34

   28 ImportStatements: ImportStatements ImportStatement .
